<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GymActivity"
    android:background="@color/white">
    <AutoCompleteTextView
        android:id="@+id/mactvGimnasios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="Buscar Gym"
        android:completionThreshold="1" />
    <Button
        android:id="@+id/butSearchGym"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mactvGimnasios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/search"
        android:backgroundTint="@color/buttonInitialView"
        android:layout_marginTop="20dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvSaveCuidades"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/butSearchGym"
        android:layout_margin="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <MultiAutoCompleteTextView
                android:id="@+id/MACTVPaises"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="10"
                app:layout_constraintTop_toBottomOf="@id/butSearchGym"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/ciudadesAEntrenar"
                android:completionThreshold="1"/>
            <Button
                android:id="@+id/butSavePaises"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_weight=".5"
                app:layout_constraintTop_toBottomOf="@id/MACTVPaises"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/saveCiudades"
                android:backgroundTint="@color/buttonInitialView"
                android:textAlignment="center"
                android:layout_marginStart="110dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tvGym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        app:layout_constraintTop_toBottomOf="@id/cvSaveCuidades"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black" />
    <CheckBox
        android:id="@+id/cbApuntado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvSaveCuidades"
        app:layout_constraintStart_toEndOf="@id/tvGym"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tvResponse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/cvSaveCuidades"
        app:layout_constraintStart_toEndOf="@id/cbApuntado"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/tvLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        app:layout_constraintTop_toBottomOf="@id/tvGym"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black" />
    <ToggleButton
        android:id="@+id/tbLike"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/tvGym"
        app:layout_constraintStart_toEndOf="@id/tvLike"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/toggle_button_selector"
        android:textOff=" "
        android:textOn=" "/>
    <TextView
        android:id="@+id/tvAntes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        app:layout_constraintTop_toBottomOf="@id/tvLike"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black" />
    <Switch
        android:id="@+id/switchAntes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tbLike"
        app:layout_constraintStart_toEndOf="@id/tvAntes"
        android:layout_marginTop="37dp"
        android:layout_marginStart="40dp"
        android:thumbTint="@color/red"
        />
    <TextView
        android:id="@+id/tvDetalleGYM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detalle"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/switchAntes"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/tvSelectedGym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDetalleGYM"
        android:text="@string/noSelected"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="45dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginStart="25dp" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNavDetailGym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDetalleGYM"
        app:layout_constraintStart_toEndOf="@id/tvSelectedGym"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/baseline_search_24"/>
</androidx.constraintlayout.widget.ConstraintLayout>