<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialActivity"
    android:background="@drawable/background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="@font/orbitronvariablefontwght"/>
    <Button
        android:id="@+id/butSignUp"
        android:text="@string/signup"
        android:fontFamily="@font/orbitronvariablefontwght"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_width="250dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/buttonInitialView"/>
    <Button
        android:id="@+id/butLogin"
        android:text="@string/login"
        android:fontFamily="@font/orbitronvariablefontwght"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_width="250dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@id/butSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/buttonInitialView"/>
</androidx.constraintlayout.widget.ConstraintLayout>