<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GymDetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/titleGym"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/app_name"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/orbitronvariablefontwght"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchGym"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/titleGym"
            android:layout_margin="15dp"
            app:queryHint="@string/search"
            app:iconifiedByDefault="false" />
        <WebView
            android:id="@+id/wvUrlGym"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintTop_toBottomOf="@id/searchGym"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@id/wvUrlGym"
            android:layout_margin="15dp"/>
        <Button
            android:id="@+id/butContinua"
            android:layout_width="300dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/videoView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/buttonInitialView"
            android:text="@string/continua"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>