<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/backgroundHomeActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/orbitronvariablefontwght"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/cvExercise"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/backgroundCardView"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="25dp"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:src="@drawable/baseline_sports_gymnastics_24"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/screen_1"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/backgroundCardView"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="25dp"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:src="@drawable/baseline_food_bank_24"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/screen_2"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvIMC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/backgroundCardView"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="25dp"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:src="@drawable/baseline_monitor_weight_24"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/screen_3"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:textSize="17dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>