<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignupActivity"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="@font/orbitronvariablefontwght"/>
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:background="@color/backgroundCardView"
        android:textColor="@color/white"
        android:hint="Nombre Completo"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etusername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:background="@color/backgroundCardView"
        android:textColor="@color/white"
        android:hint="Nombre de Usuario"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/etusername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:background="@color/backgroundCardView"
        android:textColor="@color/white"
        android:hint="Correo Electrónico"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/etemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:background="@color/backgroundCardView"
        android:textColor="@color/white"
        android:hint="Contraseña"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:inputType="textPassword"/>
    <RadioGroup
        android:id="@+id/rbSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp">
        <RadioButton
            android:id="@+id/rbMasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginEnd="10dp"/>
        <RadioButton
            android:id="@+id/rbFem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Femenino"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginStart="10dp"/>
    </RadioGroup>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipsGNivel"
        app:layout_constraintTop_toBottomOf="@id/rbSexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            android:id="@+id/chipsNivel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel1"
            style="@style/chips"
            android:textSize="19dp"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipsNivel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel2"
            style="@style/chips"
            android:textSize="19dp"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipsNivel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel3"
            style="@style/chips"
            android:textSize="19dp"/>
    </com.google.android.material.chip.ChipGroup>
    <Button
        android:id="@+id/butSignup"
        android:text="@string/signup"
        android:fontFamily="@font/orbitronvariablefontwght"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_width="250dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/buttonInitialView"/>

    <ProgressBar
        android:id="@+id/progressBarSignUp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="330dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:indeterminate="true"
        android:max="100"
        android:min="0"
        android:visibility="invisible"
         />
</androidx.constraintlayout.widget.ConstraintLayout>